--- a/.github/workflows/go_mod_tidy.yml
+++ b/.github/workflows/go_mod_tidy.yml
@@ -18,6 +18,8 @@ jobs:
         uses: actions/checkout@v3
       - name: Setup Go
         uses: actions/setup-go@v3
+        with:
+          go-version: '1.19'
       - name: check
         run: |
           go mod download
