--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Test
+name: Coverage Test
 on:
   pull_request:
     branches:
@@ -15,6 +15,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
+      with:
+        fetch-depth: 2
+    - uses: actions/setup-go@v3
+      with:
+        go-version: '1.19'
+    - name: Run coverage
+      run: go test -race -coverprofile=coverage.out -covermode=atomic
     - uses: codecov/codecov-action@v3
       with:
         name: codecov-umbrella
