--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,9 +21,10 @@ jobs:
       with:
         go-version: '1.19'
     - name: Run coverage
-      run: go test -race -coverprofile=coverage.out -covermode=atomic
+      run: go test ./pkgs/... -race -coverprofile=pkgs_coverage.out -covermode=atomic
     - uses: codecov/codecov-action@v3
       with:
         name: codecov-umbrella
+        files: ./pkgs_coverage.out
         fail_ci_if_error: true 
         verbose: true 
